<resources>
    <string name="app_name">Stima Update</string>

    <string name="register">New user? Register Here</string>
    <string name="login">Login</string>
    <string name="pref_file" translatable="false">com.labs.preference_file</string>
    <string name="pref_language_setting" translatable="false">com.labs.preference_language_setting</string>
    <string name="pref_login_status" translatable="false">com.labs.preference_login_status</string>
    <string name="pref_first_name" translatable="false">com.labs.preference_first_name</string>
    <string name="pref_last_name" translatable="false">com.labs.preference_last_name</string>
    <string name="pref_email" translatable="false">com.labs.preference_email</string>
    <string name="pref_role" translatable="false">com.labs.preference_role</string>
    <string name="pref_phone_number" translatable="false">com.labs.preference_phone_number</string>
    <string name="pref_consumer_id" translatable="false">com.labs.preference_consumer_id</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registerbtn">Register</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="label">Account Number</string>
    <string name="account_number">Account Number</string>
    <string name="meter_account">Meter Account</string>
    <string name="reset">Reset</string>

    <string-array name="lsCourseOfAction">
        <item>Reporting to site</item>
        <item>Electricity restored</item>
    </string-array>
</resources>
