<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarFieldAdminProfile"
        layout="@layout/toolbar"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFieldAdminProfileFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFieldAdminProfileLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFieldAdminProfilePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFieldAdminProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFieldAdminProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="********"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btnFieldAdminProfileCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Cancel" />

            <Button
                android:id="@+id/btnFieldAdminProfileSaveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Save Changes" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>